# AzgaarFMGtoCK3

./: .gitignore  BFS.py  BFS_expandCells.py  BFSbaronyXLS.py  BFSprovincemap.py  README.md  barony.py  baronyBFS.py  biomeWrite.py  biomes.py  bookmark.py  character.py  colorRandomBFS.py  colorrandom.py  county.py  csvspreadsheets.py  culture.py  fullexporterxls.py  generate.py  heightmap.py  hextorgb.py  jsonread.py  jsontoxlsxprovinces.py  localization.py  main.py  make_grayscale_image.py  mask.py  modFiles.py  nameCorrector.py  paths.txt  provdefcolumns.py  provinces.py  pyproject.toml  rasterMaps.py  relGenChil.py  religion.py  religionChildren.py  religionGen.py  religionfamilygen.py  requirements.txt  (+7 more)
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/: do_release.yaml
River_Test/: jsonformatter.txt  rivers.geojson
Tests/: test.geojson  tests.py
Utills/: converter_file_utills.py
tools/: Heightmap Texture tool.py
